<?xml version="1.0" encoding="utf-8"?>
<gr.ppzglou.food.util.CustomConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.dashboard.fragments.settings.DeleteAccountFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_xlarge_26sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        style="@style/ScrollViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <gr.ppzglou.food.util.CustomConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/radios_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <gr.ppzglou.food.util.CustomConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrayLight"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_why_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_medium_18sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/radioLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/message">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_1"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/radioLayout1">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_2"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/radioLayout2">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_3"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/radioLayout3">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_4"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/radioLayout4">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_5"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/radioLayout5">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="top" />

                        <TextView
                            android:id="@+id/radio_tv6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/delete_desc_6"
                            android:textColor="@color/colorBlack" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/description"
                            style="@style/FEditText.Gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/delete_description"
                            android:visibility="gone"
                            app:errorIconDrawable="@null">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInputEditTextTheme"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:gravity="start"
                                android:inputType="text|textMultiLine|textCapSentences"
                                android:maxLength="200"
                                android:maxLines="4" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </gr.ppzglou.food.util.CustomConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/radios_layout">

                <gr.ppzglou.food.util.CustomConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrayLight"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/set_pass_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_val_pass"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_medium_18sp"
                        app:layout_constraintTop_toBottomOf="@id/radios_layout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        style="@style/FEditText.Gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/delete_password"
                        app:errorIconDrawable="@null"
                        app:layout_constraintTop_toBottomOf="@+id/set_pass_tv"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/TextInputEditTextTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLength="16" />
                    </com.google.android.material.textfield.TextInputLayout>

                </gr.ppzglou.food.util.CustomConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/delete_btn"
                style="@style/FButton.Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/delete_del_account_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        </gr.ppzglou.food.util.CustomConstraintLayout>

    </ScrollView>

</gr.ppzglou.food.util.CustomConstraintLayout>