<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    style="@style/ScrollViewStyle"
    tools:context=".ui.authsetup.fragments.FingerprintSetupFragment">

    <gr.ppzglou.food.util.CustomConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:textSize="@dimen/text_xlarge_26sp"
            android:text="@string/fingerprint_setup_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fingerprint_setup_message"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large_22sp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/lock_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintWidth_percent="0.5"
            app:tint="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_fingerprint_24"
            app:layout_constraintBottom_toBottomOf="@id/lock_img"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/lock_img"
            app:layout_constraintStart_toStartOf="@id/lock_img"
            app:layout_constraintTop_toTopOf="@+id/lock_img"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.25"
            app:tint="@color/colorPrimary" />

        <Button
            android:id="@+id/fingerprint_btn"
            style="@style/EfButton.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/fingerprint_setup_fingerprint_btn"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/lock_img"
            app:layout_constraintVertical_bias="0.29000002" />

        <Button
            android:id="@+id/not_now_btn"
            style="@style/SecButton.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_medium_18sp"
            android:text="@string/fingerprint_setup_not_now_btn"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/fingerprint_btn"
            app:layout_constraintVertical_bias="0.29000002" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </gr.ppzglou.food.util.CustomConstraintLayout>

</ScrollView>