<?xml version="1.0" encoding="utf-8"?>
<gr.ppzglou.food.util.CustomConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.landing.fragments.ForgotPassFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:padding="40dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />

    <ScrollView
        style="@style/ScrollViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3">

        <gr.ppzglou.food.util.CustomConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@drawable/rippled_primary_btn_20"
                android:elevation="2dp"
                android:padding="5dp"
                android:src="@drawable/abc_vector_test"
                app:layout_constraintBottom_toBottomOf="@id/textView"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="@id/textView"
                app:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/textView"
                style="@style/FTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/forgot_pass_title"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/FEditText.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/login_email"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="25" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/reset_btn"
                style="@style/FButton.Dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/forgot_pass_reset_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.29000002" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />


        </gr.ppzglou.food.util.CustomConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

</gr.ppzglou.food.util.CustomConstraintLayout>